--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,100 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: centera;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: #2c2c2c;
 }
 
-* {
-  box-sizing: border-box;
+.title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.switch {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.format {
+  background-color: #ffaeff;
+  position: relative;
+}
+.format .element {
+  position: absolute;
+}
+.format .bg {
+  z-index: 0;
+}
+.format .cover {
+  z-index: 1;
+}
+
+.scene {
+  display: flex;
+  flex-direction: row;
+  perspective: 600px;
+}
+
+.card {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  transform-style: preserve-3d;
+  transition: transform 0.7s ease-in-out;
+}
+
+.is-flipped {
+  transform: rotateY(180deg);
+}
+
+.card-face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.card-face-front {
+  background-color: transparent;
+}
+
+.card-face-back {
+  transform: rotateY(-180deg);
+}
+
+.perk-interface {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 700px;
+  padding-top: 70px;
+}
+
+footer {
+  margin: auto 0px 15px 0px;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+}/*# sourceMappingURL=globals.css.map */
